@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-22T08:16:59Z",
+  "timestamp" : "2022-07-22T16:19:13Z",
   "count_outdated" : 406,
   "uniques_outdated" : 220,
-  "count" : 429,
+  "count" : 430,
   "uniques" : 233,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
